syntax = "proto3";

package com.thechaoscompany.dish;

service DishService {
  rpc Save (SaveDishRequest) returns (SaveDishResponse) {}
}

message SaveDishRequest {
  string name = 1;
  int64 restaurantId = 2;
}

message SaveDishResponse {
}