syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.thechaoscompany.server";

service SchoolService{
  rpc getOneByID(Id) returns (School){}
  rpc getAll(Empty) returns (SchoolsList){}
}
message Id{
  int64 id = 1;
}

message School{
  int64 id = 1;
  string name = 2;
  string location = 3;
  int32 status = 4;
}

message Empty{

}

message SchoolsList{
  repeated School school = 1;
}